# intelligent-vehicles

./: CMakeLists.txt  project-description.md
Project-materials/: motor_primitives_final_last.nb
Project-materials/matlab agent/: a_opt.m  a_opt.prj  coef_list.m  coef_list.prj  def_pass_primitive.m  final_opt_pos_j0.m  final_opt_time_j0_pass.m  final_opt_time_pass.m  (+20 more)
basic_agent_st/: .gitignore  CMakeLists.txt  a.out  agent.cpp  starting_point.cc
basic_agent_st/codegen/lib/pass_primitive/: CMakeLists.txt  codedescriptor.dmr  rtGetNaN.cpp
basic_agent_st/codegen/lib/pass_primitive/html/: report.mldatx
basic_agent_st/codegen/lib/pass_primitive/interface/: _coder_pass_primitive_api.cpp
basic_agent_st/codegen/lib/primitives/: CMakeLists.txt  codedescriptor.dmr  primitives.cpp  primitives.h  rtGetInf.cpp  rtGetInf.h  rt_nonfinite.h
basic_agent_st/codegen/lib/primitives/examples/: main.cpp
basic_agent_st/codegen/lib/primitives/interface/: _coder_primitives_api.h  _coder_primitives_mex.cpp
basic_agent_st/codegen/lib/v_opt/: CMakeLists.txt  codedescriptor.dmr  rtGetInf.cpp  rtGetInf.h  rtGetNaN.cpp  rtGetNaN.h  rt_nonfinite.cpp  rt_nonfinite.h  rtwtypes.h  v_opt.cpp  v_opt.h  v_opt_rtw.mk  v_opt_types.h
basic_agent_st/codegen/lib/v_opt/examples/: main.cpp  main.h
basic_agent_st/codegen/lib/v_opt/html/: report.mldatx
basic_agent_st/codegen/lib/v_opt/interface/: _coder_v_opt_api.cpp  _coder_v_opt_api.h  _coder_v_opt_mex.cpp  _coder_v_opt_mex.h
basic_agent_st/codegen/mex/pass_primitive_mex/html/: report.mldatx
basic_agent_st/lib/: interfaces_data_structs.h
(+37 files in other folders)
